v3/y.output
Terminals unused in grammar

   IMPORT
   JNULL
   OPERATOR
   ASS_AND
   ASS_OR
   '~'


Grammar

    0 $accept: ProgramFile $end

    1 TypeSpecifier: TypeName
    2              | TypeName TypeDimExprs

    3 TypeDimExprs: '[' ']'
    4             | TypeDimExprs '[' ']'

    5 TypeName: PrimitiveType

    6 PrimitiveType: BOOLEAN
    7              | CHAR
    8              | BYTE
    9              | SHORT
   10              | INT
   11              | LONG
   12              | FLOAT
   13              | DOUBLE
   14              | VOID
   15              | STRING

   16 ProgramFile: ClassHeader '{' FieldDeclarations '}'

   17 ClassHeader: PUBLIC CLASS ID
   18            | CLASS ID

   19 FieldDeclarations: FieldDeclaration
   20                  | FieldDeclarations FieldDeclaration

   21 FieldDeclaration: AttrDeclaration ';'
   22                 | MethodDeclaration

   23 AttrDeclaration: PUBLIC STATIC TypeSpecifier VariableDeclarators
   24                | STATIC TypeSpecifier VariableDeclarators

   25 VariableDeclarators: VariableDeclarator
   26                    | VariableDeclarators ',' VariableDeclarator

   27 VariableDeclarator: DeclaratorName
   28                   | DeclaratorName '=' VariableInitializer

   29 VariableInitializer: Expression
   30                    | '{' '}'
   31                    | '{' ArrayInitializers '}'

   32 NewAllocationExpression: ArrayAllocationExpression
   33                        | ArrayAllocationExpression '{' '}'
   34                        | ArrayAllocationExpression '{' ArrayInitializers '}'

   35 ArrayAllocationExpression: NEW TypeName DimExprs

   36 ArrayInitializers: VariableInitializer
   37                  | ArrayInitializers ',' VariableInitializer
   38                  | ArrayInitializers ','

   39 DimExprs: DimExpr
   40         | DimExprs DimExpr

   41 DimExpr: '[' ArithmeticExpression ']'

   42 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator Block
   43                  | STATIC TypeSpecifier MethodDeclarator Block

   44 MethodDeclarator: DeclaratorName '(' ParameterList ')'
   45                 | DeclaratorName '(' ')'
   46                 | MethodDeclarator OP_DIM

   47 ParameterList: Parameter
   48              | ParameterList ',' Parameter

   49 Parameter: TypeSpecifier DeclaratorName

   50 DeclaratorName: ID
   51               | DeclaratorName OP_DIM

   52 Block: '{' LocalVariableDeclarationsAndStatements '}'
   53      | '{' '}'

   54 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationOrStatement
   55                                       | LocalVariableDeclarationsAndStatements LocalVariableDeclarationOrStatement

   56 LocalVariableDeclarationOrStatement: LocalVariableDeclarationStatement
   57                                    | Statement

   58 LocalVariableDeclarationStatement: TypeSpecifier VariableDeclarators ';'

   59 Statement: LabeledStatement
   60          | Expression ';'
   61          | SelectionStatement
   62          | IterationStatement
   63          | JumpStatement
   64          | Block
   65          | ';'

   66 LabeledStatement: ID ':' LocalVariableDeclarationOrStatement
   67                 | CASE ConditionalExpression ':' LocalVariableDeclarationOrStatement
   68                 | DEFAULT ':' LocalVariableDeclarationOrStatement

   69 SelectionStatement: IF '(' Expression ')' Statement
   70                   | IF '(' Expression ')' Statement ELSE Statement
   71                   | SWITCH '(' Expression ')' Block

   72 IterationStatement: WHILE '(' Expression ')' Statement
   73                   | DO Statement WHILE '(' Expression ')' ';'
   74                   | FOR '(' ForInit ForExpr ForIncr ')' Statement
   75                   | FOR '(' ForInit ForExpr ')' Statement

   76 ForInit: Expressions ';'
   77        | LocalVariableDeclarationStatement
   78        | ';'

   79 ForExpr: Expression ';'
   80        | ';'

   81 ForIncr: Expressions

   82 Expressions: Expression
   83            | Expressions ',' Expression

   84 JumpStatement: BREAK ID ';'
   85              | BREAK ';'
   86              | CONTINUE ID ';'
   87              | CONTINUE ';'
   88              | RETURN Expression ';'
   89              | RETURN ';'

   90 MethodCall: ID '(' ArgumentList ')'
   91           | ID '(' ')'

   92 ArgumentList: Expression
   93             | ArgumentList ',' Expression

   94 UnaryExpression: OP_INC BasicElement
   95                | OP_DEC BasicElement
   96                | BasicElement OP_INC
   97                | BasicElement OP_DEC
   98                | BasicElement
   99                | '!' ID
  100                | '!' MethodCall
  101                | '!' ArrayAccess

  102 BasicElement: LITERAL
  103             | MethodCall
  104             | ID
  105             | ArrayAccess

  106 ArrayAccess: ID '[' ArithmeticExpression ']'

  107 CastExpression: UnaryExpression
  108               | '(' PrimitiveType ')' UnaryExpression
  109               | '(' PrimitiveType ')' '(' AssignmentExpression ')'
  110               | '(' PrimitiveType ')' '(' ConditionalExpression ')'

  111 ArithmeticExpression: CastExpression
  112                     | ArithmeticExpression '+' ArithmeticExpression
  113                     | ArithmeticExpression '-' ArithmeticExpression
  114                     | ArithmeticExpression '/' ArithmeticExpression
  115                     | ArithmeticExpression '*' ArithmeticExpression
  116                     | ArithmeticExpression '%' ArithmeticExpression
  117                     | ArithmeticExpression OP_SHL ArithmeticExpression
  118                     | ArithmeticExpression OP_SHR ArithmeticExpression

  119 RelationalExpression: ArithmeticExpression
  120                     | ArithmeticExpression '<' RelationalExpression
  121                     | ArithmeticExpression '>' RelationalExpression
  122                     | ArithmeticExpression OP_LESS_EQUAL RelationalExpression
  123                     | ArithmeticExpression OP_GREATER_EQUAL RelationalExpression
  124                     | ArithmeticExpression OP_EQUAL RelationalExpression
  125                     | ArithmeticExpression OP_DIFFERENT RelationalExpression
  126                     | ArithmeticExpression '&' RelationalExpression
  127                     | ArithmeticExpression '^' RelationalExpression
  128                     | ArithmeticExpression '|' RelationalExpression
  129                     | ArithmeticExpression OP_AND RelationalExpression
  130                     | ArithmeticExpression OP_OR RelationalExpression

  131 Expression: ConditionalExpression
  132           | AssignmentExpression
  133           | '(' Expression ')'

  134 ConditionalExpression: RelationalExpression
  135                      | RelationalExpression '?' Expression ':' Expression

  136 AssignmentExpression: ID '=' Expression
  137                     | ID '=' NewAllocationExpression
  138                     | ID ASS_MUL Expression
  139                     | ID ASS_DIV Expression
  140                     | ID ASS_ADD Expression
  141                     | ID ASS_SUB Expression
  142                     | ID ASS_XOR Expression
  143                     | ID ASS_MOD Expression
  144                     | ID ASS_SHL Expression
  145                     | ID ASS_SHR Expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 99 100 101
'%' (37) 116
'&' (38) 126
'(' (40) 44 45 69 70 71 72 73 74 75 90 91 108 109 110 133
')' (41) 44 45 69 70 71 72 73 74 75 90 91 108 109 110 133
'*' (42) 115
'+' (43) 112
',' (44) 26 37 38 48 83 93
'-' (45) 113
'/' (47) 114
':' (58) 66 67 68 135
';' (59) 21 58 60 65 73 76 78 79 80 84 85 86 87 88 89
'<' (60) 120
'=' (61) 28 136 137
'>' (62) 121
'?' (63) 135
'[' (91) 3 4 41 106
']' (93) 3 4 41 106
'^' (94) 127
'{' (123) 16 30 31 33 34 52 53
'|' (124) 128
'}' (125) 16 30 31 33 34 52 53
'~' (126)
error (256)
BOOLEAN (258) 6
BREAK (259) 84 85
BYTE (260) 8
CASE (261) 67
CHAR (262) 7
CLASS (263) 17 18
CONTINUE (264) 86 87
DEFAULT (265) 68
DO (266) 73
DOUBLE (267) 13
ELSE (268) 70
FLOAT (269) 12
FOR (270) 74 75
IF (271) 69 70
IMPORT (272)
INT (273) 10
JNULL (274)
LONG (275) 11
NEW (276) 35
OPERATOR (277)
PUBLIC (278) 17 23 42
RETURN (279) 88 89
SHORT (280) 9
STATIC (281) 23 24 42 43
STRING (282) 15
SWITCH (283) 71
VOID (284) 14
WHILE (285) 72 73
OP_INC (286) 94 96
OP_DEC (287) 95 97
OP_SHL (288) 117
OP_SHR (289) 118
OP_GREATER_EQUAL (290) 123
OP_LESS_EQUAL (291) 122
OP_EQUAL (292) 124
OP_DIFFERENT (293) 125
OP_AND (294) 129
OP_OR (295) 130
OP_DIM (296) 46 51
ASS_MUL (297) 138
ASS_DIV (298) 139
ASS_ADD (299) 140
ASS_SUB (300) 141
ASS_XOR (301) 142
ASS_MOD (302) 143
ASS_SHL (303) 144
ASS_SHR (304) 145
ASS_AND (305)
ASS_OR (306)
ID (307) 17 18 50 66 84 86 90 91 99 104 106 136 137 138 139 140 141
    142 143 144 145
LITERAL (308) 102


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
TypeSpecifier (78)
    on left: 1 2, on right: 23 24 42 43 49 58
TypeDimExprs (79)
    on left: 3 4, on right: 2 4
TypeName (80)
    on left: 5, on right: 1 2 35
PrimitiveType (81)
    on left: 6 7 8 9 10 11 12 13 14 15, on right: 5 108 109 110
ProgramFile (82)
    on left: 16, on right: 0
ClassHeader (83)
    on left: 17 18, on right: 16
FieldDeclarations (84)
    on left: 19 20, on right: 16 20
FieldDeclaration (85)
    on left: 21 22, on right: 19 20
AttrDeclaration (86)
    on left: 23 24, on right: 21
VariableDeclarators (87)
    on left: 25 26, on right: 23 24 26 58
VariableDeclarator (88)
    on left: 27 28, on right: 25 26
VariableInitializer (89)
    on left: 29 30 31, on right: 28 36 37
NewAllocationExpression (90)
    on left: 32 33 34, on right: 137
ArrayAllocationExpression (91)
    on left: 35, on right: 32 33 34
ArrayInitializers (92)
    on left: 36 37 38, on right: 31 34 37 38
DimExprs (93)
    on left: 39 40, on right: 35 40
DimExpr (94)
    on left: 41, on right: 39 40
MethodDeclaration (95)
    on left: 42 43, on right: 22
MethodDeclarator (96)
    on left: 44 45 46, on right: 42 43 46
ParameterList (97)
    on left: 47 48, on right: 44 48
Parameter (98)
    on left: 49, on right: 47 48
DeclaratorName (99)
    on left: 50 51, on right: 27 28 44 45 49 51
Block (100)
    on left: 52 53, on right: 42 43 64 71
LocalVariableDeclarationsAndStatements (101)
    on left: 54 55, on right: 52 55
LocalVariableDeclarationOrStatement (102)
    on left: 56 57, on right: 54 55 66 67 68
LocalVariableDeclarationStatement (103)
    on left: 58, on right: 56 77
Statement (104)
    on left: 59 60 61 62 63 64 65, on right: 57 69 70 72 73 74 75
LabeledStatement (105)
    on left: 66 67 68, on right: 59
SelectionStatement (106)
    on left: 69 70 71, on right: 61
IterationStatement (107)
    on left: 72 73 74 75, on right: 62
ForInit (108)
    on left: 76 77 78, on right: 74 75
ForExpr (109)
    on left: 79 80, on right: 74 75
ForIncr (110)
    on left: 81, on right: 74
Expressions (111)
    on left: 82 83, on right: 76 81 83
JumpStatement (112)
    on left: 84 85 86 87 88 89, on right: 63
MethodCall (113)
    on left: 90 91, on right: 100 103
ArgumentList (114)
    on left: 92 93, on right: 90 93
UnaryExpression (115)
    on left: 94 95 96 97 98 99 100 101, on right: 107 108
BasicElement (116)
    on left: 102 103 104 105, on right: 94 95 96 97 98
ArrayAccess (117)
    on left: 106, on right: 101 105
CastExpression (118)
    on left: 107 108 109 110, on right: 111
ArithmeticExpression (119)
    on left: 111 112 113 114 115 116 117 118, on right: 41 106 112
    113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128
    129 130
RelationalExpression (120)
    on left: 119 120 121 122 123 124 125 126 127 128 129 130, on right:
    120 121 122 123 124 125 126 127 128 129 130 134 135
Expression (121)
    on left: 131 132 133, on right: 29 60 69 70 71 72 73 79 82 83 88
    92 93 133 135 136 138 139 140 141 142 143 144 145
ConditionalExpression (122)
    on left: 134 135, on right: 67 110 131
AssignmentExpression (123)
    on left: 136 137 138 139 140 141 142 143 144 145, on right: 109
    132


state 0

    0 $accept: . ProgramFile $end

    CLASS   shift, and go to state 1
    PUBLIC  shift, and go to state 2

    ProgramFile  go to state 3
    ClassHeader  go to state 4


state 1

   18 ClassHeader: CLASS . ID

    ID  shift, and go to state 5


state 2

   17 ClassHeader: PUBLIC . CLASS ID

    CLASS  shift, and go to state 6


state 3

    0 $accept: ProgramFile . $end

    $end  shift, and go to state 7


state 4

   16 ProgramFile: ClassHeader . '{' FieldDeclarations '}'

    '{'  shift, and go to state 8


state 5

   18 ClassHeader: CLASS ID .

    $default  reduce using rule 18 (ClassHeader)


state 6

   17 ClassHeader: PUBLIC CLASS . ID

    ID  shift, and go to state 9


state 7

    0 $accept: ProgramFile $end .

    $default  accept


state 8

   16 ProgramFile: ClassHeader '{' . FieldDeclarations '}'

    PUBLIC  shift, and go to state 10
    STATIC  shift, and go to state 11

    FieldDeclarations  go to state 12
    FieldDeclaration   go to state 13
    AttrDeclaration    go to state 14
    MethodDeclaration  go to state 15


state 9

   17 ClassHeader: PUBLIC CLASS ID .

    $default  reduce using rule 17 (ClassHeader)


state 10

   23 AttrDeclaration: PUBLIC . STATIC TypeSpecifier VariableDeclarators
   42 MethodDeclaration: PUBLIC . STATIC TypeSpecifier MethodDeclarator Block

    STATIC  shift, and go to state 16


state 11

   24 AttrDeclaration: STATIC . TypeSpecifier VariableDeclarators
   43 MethodDeclaration: STATIC . TypeSpecifier MethodDeclarator Block

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26

    TypeSpecifier  go to state 27
    TypeName       go to state 28
    PrimitiveType  go to state 29


state 12

   16 ProgramFile: ClassHeader '{' FieldDeclarations . '}'
   20 FieldDeclarations: FieldDeclarations . FieldDeclaration

    PUBLIC  shift, and go to state 10
    STATIC  shift, and go to state 11
    '}'     shift, and go to state 30

    FieldDeclaration   go to state 31
    AttrDeclaration    go to state 14
    MethodDeclaration  go to state 15


state 13

   19 FieldDeclarations: FieldDeclaration .

    $default  reduce using rule 19 (FieldDeclarations)


state 14

   21 FieldDeclaration: AttrDeclaration . ';'

    ';'  shift, and go to state 32


state 15

   22 FieldDeclaration: MethodDeclaration .

    $default  reduce using rule 22 (FieldDeclaration)


state 16

   23 AttrDeclaration: PUBLIC STATIC . TypeSpecifier VariableDeclarators
   42 MethodDeclaration: PUBLIC STATIC . TypeSpecifier MethodDeclarator Block

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26

    TypeSpecifier  go to state 33
    TypeName       go to state 28
    PrimitiveType  go to state 29


state 17

    6 PrimitiveType: BOOLEAN .

    $default  reduce using rule 6 (PrimitiveType)


state 18

    8 PrimitiveType: BYTE .

    $default  reduce using rule 8 (PrimitiveType)


state 19

    7 PrimitiveType: CHAR .

    $default  reduce using rule 7 (PrimitiveType)


state 20

   13 PrimitiveType: DOUBLE .

    $default  reduce using rule 13 (PrimitiveType)


state 21

   12 PrimitiveType: FLOAT .

    $default  reduce using rule 12 (PrimitiveType)


state 22

   10 PrimitiveType: INT .

    $default  reduce using rule 10 (PrimitiveType)


state 23

   11 PrimitiveType: LONG .

    $default  reduce using rule 11 (PrimitiveType)


state 24

    9 PrimitiveType: SHORT .

    $default  reduce using rule 9 (PrimitiveType)


state 25

   15 PrimitiveType: STRING .

    $default  reduce using rule 15 (PrimitiveType)


state 26

   14 PrimitiveType: VOID .

    $default  reduce using rule 14 (PrimitiveType)


state 27

   24 AttrDeclaration: STATIC TypeSpecifier . VariableDeclarators
   43 MethodDeclaration: STATIC TypeSpecifier . MethodDeclarator Block

    ID  shift, and go to state 34

    VariableDeclarators  go to state 35
    VariableDeclarator   go to state 36
    MethodDeclarator     go to state 37
    DeclaratorName       go to state 38


state 28

    1 TypeSpecifier: TypeName .
    2              | TypeName . TypeDimExprs

    '['  shift, and go to state 39

    $default  reduce using rule 1 (TypeSpecifier)

    TypeDimExprs  go to state 40


state 29

    5 TypeName: PrimitiveType .

    $default  reduce using rule 5 (TypeName)


state 30

   16 ProgramFile: ClassHeader '{' FieldDeclarations '}' .

    $default  reduce using rule 16 (ProgramFile)


state 31

   20 FieldDeclarations: FieldDeclarations FieldDeclaration .

    $default  reduce using rule 20 (FieldDeclarations)


state 32

   21 FieldDeclaration: AttrDeclaration ';' .

    $default  reduce using rule 21 (FieldDeclaration)


state 33

   23 AttrDeclaration: PUBLIC STATIC TypeSpecifier . VariableDeclarators
   42 MethodDeclaration: PUBLIC STATIC TypeSpecifier . MethodDeclarator Block

    ID  shift, and go to state 34

    VariableDeclarators  go to state 41
    VariableDeclarator   go to state 36
    MethodDeclarator     go to state 42
    DeclaratorName       go to state 38


state 34

   50 DeclaratorName: ID .

    $default  reduce using rule 50 (DeclaratorName)


state 35

   24 AttrDeclaration: STATIC TypeSpecifier VariableDeclarators .
   26 VariableDeclarators: VariableDeclarators . ',' VariableDeclarator

    ','  shift, and go to state 43

    $default  reduce using rule 24 (AttrDeclaration)


state 36

   25 VariableDeclarators: VariableDeclarator .

    $default  reduce using rule 25 (VariableDeclarators)


state 37

   43 MethodDeclaration: STATIC TypeSpecifier MethodDeclarator . Block
   46 MethodDeclarator: MethodDeclarator . OP_DIM

    OP_DIM  shift, and go to state 44
    '{'     shift, and go to state 45

    Block  go to state 46


state 38

   27 VariableDeclarator: DeclaratorName .
   28                   | DeclaratorName . '=' VariableInitializer
   44 MethodDeclarator: DeclaratorName . '(' ParameterList ')'
   45                 | DeclaratorName . '(' ')'
   51 DeclaratorName: DeclaratorName . OP_DIM

    OP_DIM  shift, and go to state 47
    '='     shift, and go to state 48
    '('     shift, and go to state 49

    $default  reduce using rule 27 (VariableDeclarator)


state 39

    3 TypeDimExprs: '[' . ']'

    ']'  shift, and go to state 50


state 40

    2 TypeSpecifier: TypeName TypeDimExprs .
    4 TypeDimExprs: TypeDimExprs . '[' ']'

    '['  shift, and go to state 51

    $default  reduce using rule 2 (TypeSpecifier)


state 41

   23 AttrDeclaration: PUBLIC STATIC TypeSpecifier VariableDeclarators .
   26 VariableDeclarators: VariableDeclarators . ',' VariableDeclarator

    ','  shift, and go to state 43

    $default  reduce using rule 23 (AttrDeclaration)


state 42

   42 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator . Block
   46 MethodDeclarator: MethodDeclarator . OP_DIM

    OP_DIM  shift, and go to state 44
    '{'     shift, and go to state 45

    Block  go to state 52


state 43

   26 VariableDeclarators: VariableDeclarators ',' . VariableDeclarator

    ID  shift, and go to state 34

    VariableDeclarator  go to state 53
    DeclaratorName      go to state 54


state 44

   46 MethodDeclarator: MethodDeclarator OP_DIM .

    $default  reduce using rule 46 (MethodDeclarator)


state 45

   52 Block: '{' . LocalVariableDeclarationsAndStatements '}'
   53      | '{' . '}'

    BOOLEAN   shift, and go to state 17
    BREAK     shift, and go to state 55
    BYTE      shift, and go to state 18
    CASE      shift, and go to state 56
    CHAR      shift, and go to state 19
    CONTINUE  shift, and go to state 57
    DEFAULT   shift, and go to state 58
    DO        shift, and go to state 59
    DOUBLE    shift, and go to state 20
    FLOAT     shift, and go to state 21
    FOR       shift, and go to state 60
    IF        shift, and go to state 61
    INT       shift, and go to state 22
    LONG      shift, and go to state 23
    RETURN    shift, and go to state 62
    SHORT     shift, and go to state 24
    STRING    shift, and go to state 25
    SWITCH    shift, and go to state 63
    VOID      shift, and go to state 26
    WHILE     shift, and go to state 64
    OP_INC    shift, and go to state 65
    OP_DEC    shift, and go to state 66
    ID        shift, and go to state 67
    LITERAL   shift, and go to state 68
    '('       shift, and go to state 69
    '!'       shift, and go to state 70
    '{'       shift, and go to state 45
    '}'       shift, and go to state 71
    ';'       shift, and go to state 72

    TypeSpecifier                           go to state 73
    TypeName                                go to state 28
    PrimitiveType                           go to state 29
    Block                                   go to state 74
    LocalVariableDeclarationsAndStatements  go to state 75
    LocalVariableDeclarationOrStatement     go to state 76
    LocalVariableDeclarationStatement       go to state 77
    Statement                               go to state 78
    LabeledStatement                        go to state 79
    SelectionStatement                      go to state 80
    IterationStatement                      go to state 81
    JumpStatement                           go to state 82
    MethodCall                              go to state 83
    UnaryExpression                         go to state 84
    BasicElement                            go to state 85
    ArrayAccess                             go to state 86
    CastExpression                          go to state 87
    ArithmeticExpression                    go to state 88
    RelationalExpression                    go to state 89
    Expression                              go to state 90
    ConditionalExpression                   go to state 91
    AssignmentExpression                    go to state 92


state 46

   43 MethodDeclaration: STATIC TypeSpecifier MethodDeclarator Block .

    $default  reduce using rule 43 (MethodDeclaration)


state 47

   51 DeclaratorName: DeclaratorName OP_DIM .

    $default  reduce using rule 51 (DeclaratorName)


state 48

   28 VariableDeclarator: DeclaratorName '=' . VariableInitializer

    OP_INC   shift, and go to state 65
    OP_DEC   shift, and go to state 66
    ID       shift, and go to state 93
    LITERAL  shift, and go to state 68
    '('      shift, and go to state 69
    '!'      shift, and go to state 70
    '{'      shift, and go to state 94

    VariableInitializer    go to state 95
    MethodCall             go to state 83
    UnaryExpression        go to state 84
    BasicElement           go to state 85
    ArrayAccess            go to state 86
    CastExpression         go to state 87
    ArithmeticExpression   go to state 88
    RelationalExpression   go to state 89
    Expression             go to state 96
    ConditionalExpression  go to state 91
    AssignmentExpression   go to state 92


state 49

   44 MethodDeclarator: DeclaratorName '(' . ParameterList ')'
   45                 | DeclaratorName '(' . ')'

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26
    ')'      shift, and go to state 97

    TypeSpecifier  go to state 98
    TypeName       go to state 28
    PrimitiveType  go to state 29
    ParameterList  go to state 99
    Parameter      go to state 100


state 50

    3 TypeDimExprs: '[' ']' .

    $default  reduce using rule 3 (TypeDimExprs)


state 51

    4 TypeDimExprs: TypeDimExprs '[' . ']'

    ']'  shift, and go to state 101


state 52

   42 MethodDeclaration: PUBLIC STATIC TypeSpecifier MethodDeclarator Block .

    $default  reduce using rule 42 (MethodDeclaration)


state 53

   26 VariableDeclarators: VariableDeclarators ',' VariableDeclarator .

    $default  reduce using rule 26 (VariableDeclarators)


state 54

   27 VariableDeclarator: DeclaratorName .
   28                   | DeclaratorName . '=' VariableInitializer
   51 DeclaratorName: DeclaratorName . OP_DIM

    OP_DIM  shift, and go to state 47
    '='     shift, and go to state 48

    $default  reduce using rule 27 (VariableDeclarator)


state 55

   84 JumpStatement: BREAK . ID ';'
   85              | BREAK . ';'

    ID   shift, and go to state 102
    ';'  shift, and go to state 103


state 56

   67 LabeledStatement: CASE . ConditionalExpression ':' LocalVariableDeclarationOrStatement

    OP_INC   shift, and go to state 65
    OP_DEC   shift, and go to state 66
    ID       shift, and go to state 104
    LITERAL  shift, and go to state 68
    '('      shift, and go to state 105
    '!'      shift, and go to state 70

    MethodCall             go to state 83
    UnaryExpression        go to state 84
    BasicElement           go to state 85
    ArrayAccess            go to state 86
    CastExpression         go to state 87
    ArithmeticExpression   go to state 88
    RelationalExpression   go to state 89
    ConditionalExpression  go to state 106


state 57

   86 JumpStatement: CONTINUE . ID ';'
   87              | CONTINUE . ';'

    ID   shift, and go to state 107
    ';'  shift, and go to state 108


state 58

   68 LabeledStatement: DEFAULT . ':' LocalVariableDeclarationOrStatement

    ':'  shift, and go to state 109


state 59

   73 IterationStatement: DO . Statement WHILE '(' Expression ')' ';'

    BREAK     shift, and go to state 55
    CASE      shift, and go to state 56
    CONTINUE  shift, and go to state 57
    DEFAULT   shift, and go to state 58
    DO        shift, and go to state 59
    FOR       shift, and go to state 60
    IF        shift, and go to state 61
    RETURN    shift, and go to state 62
    SWITCH    shift, and go to state 63
    WHILE     shift, and go to state 64
    OP_INC    shift, and go to state 65
    OP_DEC    shift, and go to state 66
    ID        shift, and go to state 67
    LITERAL   shift, and go to state 68
    '('       shift, and go to state 69
    '!'       shift, and go to state 70
    '{'       shift, and go to state 45
    ';'       shift, and go to state 72

    Block                  go to state 74
    Statement              go to state 110
    LabeledStatement       go to state 79
    SelectionStatement     go to state 80
    IterationStatement     go to state 81
    JumpStatement          go to state 82
    MethodCall             go to state 83
    UnaryExpression        go to state 84
    BasicElement           go to state 85
    ArrayAccess            go to state 86
    CastExpression         go to state 87
    ArithmeticExpression   go to state 88
    RelationalExpression   go to state 89
    Expression             go to state 90
    ConditionalExpression  go to state 91
    AssignmentExpression   go to state 92


state 60

   74 IterationStatement: FOR . '(' ForInit ForExpr ForIncr ')' Statement
   75                   | FOR . '(' ForInit ForExpr ')' Statement

    '('  shift, and go to state 111


state 61

   69 SelectionStatement: IF . '(' Expression ')' Statement
   70                   | IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 112


state 62

   88 JumpStatement: RETURN . Expression ';'
   89              | RETURN . ';'

    OP_INC   shift, and go to state 65
    OP_DEC   shift, and go to state 66
    ID       shift, and go to state 93
    LITERAL  shift, and go to state 68
    '('      shift, and go to state 69
    '!'      shift, and go to state 70
    ';'      shift, and go to state 113

    MethodCall             go to state 83
    UnaryExpression        go to state 84
    BasicElement           go to state 85
    ArrayAccess            go to state 86
    CastExpression         go to state 87
    ArithmeticExpression   go to state 88
    RelationalExpression   go to state 89
    Expression             go to state 114
    ConditionalExpression  go to state 91
    AssignmentExpression   go to state 92


state 63

   71 SelectionStatement: SWITCH . '(' Expression ')' Block

    '('  shift, and go to state 115


state 64

   72 IterationStatement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 116


state 65

   94 UnaryExpression: OP_INC . BasicElement

    ID       shift, and go to state 104
    LITERAL  shift, and go to state 68

    MethodCall    go to state 83
    BasicElement  go to state 117
    ArrayAccess   go to state 86


state 66

   95 UnaryExpression: OP_DEC . BasicElement

    ID       shift, and go to state 104
    LITERAL  shift, and go to state 68

    MethodCall    go to state 83
    BasicElement  go to state 118
    ArrayAccess   go to state 86


state 67

   66 LabeledStatement: ID . ':' LocalVariableDeclarationOrStatement
   90 MethodCall: ID . '(' ArgumentList ')'
   91           | ID . '(' ')'
  104 BasicElement: ID .
  106 ArrayAccess: ID . '[' ArithmeticExpression ']'
  136 AssignmentExpression: ID . '=' Expression
  137                     | ID . '=' NewAllocationExpression
  138                     | ID . ASS_MUL Expression
  139                     | ID . ASS_DIV Expression
  140                     | ID . ASS_ADD Expression
  141                     | ID . ASS_SUB Expression
  142                     | ID . ASS_XOR Expression
  143                     | ID . ASS_MOD Expression
  144                     | ID . ASS_SHL Expression
  145                     | ID . ASS_SHR Expression

    ASS_MUL  shift, and go to state 119
    ASS_DIV  shift, and go to state 120
    ASS_ADD  shift, and go to state 121
    ASS_SUB  shift, and go to state 122
    ASS_XOR  shift, and go to state 123
    ASS_MOD  shift, and go to state 124
    ASS_SHL  shift, and go to state 125
    ASS_SHR  shift, and go to state 126
    '='      shift, and go to state 127
    '('      shift, and go to state 128
    '['      shift, and go to state 129
    ':'      shift, and go to state 130

    $default  reduce using rule 104 (BasicElement)


state 68

  102 BasicElement: LITERAL .

    $default  reduce using rule 102 (BasicElement)


state 69

  108 CastExpression: '(' . PrimitiveType ')' UnaryExpression
  109               | '(' . PrimitiveType ')' '(' AssignmentExpression ')'
  110               | '(' . PrimitiveType ')' '(' ConditionalExpression ')'
  133 Expression: '(' . Expression ')'

    BOOLEAN  shift, and go to state 17
    BYTE     shift, and go to state 18
    CHAR     shift, and go to state 19
    DOUBLE   shift, and go to state 20
    FLOAT    shift, and go to state 21
    INT      shift, and go to state 22
    LONG     shift, and go to state 23
    SHORT    shift, and go to state 24
    STRING   shift, and go to state 25
    VOID     shift, and go to state 26
    OP_INC   shift, and go to state 65
    OP_DEC   shift, and go to state 66
    ID       shift, and go to state 93
    LITERAL  shift, and go to state 68
    '('      shift, and go to state 69
    '!'      shift, and go to state 70

    PrimitiveType          go to state 131
    MethodCall             go to state 83
    UnaryExpression        go to state 84
    BasicElement           go to state 85
    ArrayAccess            go to state 86
    CastExpression         go to state 87
    ArithmeticExpression   go to state 88
    RelationalExpression   go to state 89
    Expression             go to state 132
    ConditionalExpression  go to state 91
    AssignmentExpression   go to state 92


state 70

   99 UnaryExpression: '!' . ID
  100                | '!' . MethodCall
  101                | '!' . ArrayAccess

    ID  shift, and go to state 133

    MethodCall   go to state 134
    ArrayAccess  go to state 135


state 71

   53 Block: '{' '}' .

    $default  reduce using rule 53 (Block)


state 72

   65 Statement: ';' .

    $default  reduce using rule 65 (Statement)


state 73

   58 LocalVariableDeclarationStatement: TypeSpecifier . VariableDeclarators ';'

    ID  shift, and go to state 34

    VariableDeclarators  go to state 136
    VariableDeclarator   go to state 36
    DeclaratorName       go to state 54


state 74

   64 Statement: Block .

    $default  reduce using rule 64 (Statement)


state 75

   52 Block: '{' LocalVariableDeclarationsAndStatements . '}'
   55 LocalVariableDeclarationsAndStatements: LocalVariableDeclarationsAndStatements . LocalVariableDeclarationOrStatement

    BOOLEAN   shift, and go to state 17
    BREAK     shift, and go to state 55
    BYTE      shift, and go to state 18
    CASE      shift, and go to state 56
    CHAR      shift, and go to state 19
    CONTINUE  shift, and go to state 57
    DEFAULT   shift, and go to state 58
    DO        shift, and go to state 59
    DOUBLE    shift, and go to state 20
    FLOAT     shift, and go to state 21
    FOR       shift, and go to state 60
    IF        shift, and go to state 61
    INT       shift, and go to state 22
    LONG      shift, and go to state 23
    RETURN    shift, and go to state 62
    SHORT     shift, and go to state 24
    STRING    shift, and go to state 25
    SWITCH    shift, and go to state 63
    VOID      shift, and go to state 26
    WHILE     shift, and go to state 64
    OP_INC    shift, and go to state 65
    OP_DEC    shift, and go to state 66
    ID        shift, and go to state 67
    LITERAL   shift, and go to state 68
    '('       shift, and go to state 69
    '!'       shift, and go to state 70
    '{'       shift, and go to state 45
    '}'       shift, and go to state 137
    ';'       shift, and go to state 72
